crates/ssa-workflow-derive/tests/ui/unsupported_attribute.stderr
error: unsupported canonical_encode attribute
 --> tests/ui/unsupported_attribute.rs:4:20
  |
4 | #[canonical_encode(foo)]
  |                    ^^^
